--- a/bin/install
+++ b/bin/install
@@ -30,7 +30,14 @@ function install() {
   unzip "${tmp_download_dir}/${download_filename}"
   mkdir -p ./bin
   ln -s ../language_server.sh ./bin/elixir-ls
-  ln -s ../debugger.sh ./bin/elixir-ls-debugger
+
+  if test -f ../debugger.sh; then
+    ln -s ../debugger.sh ./bin/elixir-ls-debugger
+  fi
+  if test -f ../debug_adapter.sh; then
+    ln -s ../debugger.sh ./bin/elixir-ls-debugger
+  fi
+
   cp -fpr * "${install_path}"
 
   popd >/dev/null
