--- a/bin/install
+++ b/bin/install
@@ -35,10 +35,10 @@ function install() {
     ln -s ../debugger.sh ./bin/elixir-ls-debugger
   fi
   if test -f ../debug_adapter.sh; then
-    ln -s ../debugger.sh ./bin/elixir-ls-debugger
+    ln -s ../debug_adapter.sh ./bin/elixir-ls-debugger
   fi
 
-  cp -fpr * "${install_path}"
+  cp -fpr ../* "${install_path}"
 
   popd >/dev/null
   popd >/dev/null
